// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with footer message 1`] = `
<div
  className="a b"
>
  <h3
    className="c d"
  >
    Title
  </h3>
  CardContent
  <div
    className="e f g h"
  >
    Footer Message
  </div>
</div>
`;

exports[`should render with footer message 2`] = `
"
.a {
  padding: 1.5rem
}

.c {
  font-weight: 400
}

.d {
  margin-bottom: 1rem
}

.e {
  font-size: 0.8rem
}

.f {
  color: #7c7c7c
}

.g {
  line-height: 1.3
}

.h {
  margin-top: 1.5em
}

@media (min-width: 47.2em) {
  .b {
    display: table-cell
  }
}
"
`;

exports[`should render without footer message 1`] = `
<div
  className="a b"
>
  <h3
    className="c d"
  >
    Title
  </h3>
  CardContent
</div>
`;

exports[`should render without footer message 2`] = `
"
.a {
  padding: 1.5rem
}

.c {
  font-weight: 400
}

.d {
  margin-bottom: 1rem
}

@media (min-width: 47.2em) {
  .b {
    display: table-cell
  }
}
"
`;
